examples/test/testpolicy7975.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7975
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key8: value34
      key9: value29
      key33: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value15
      podSelector:
        matchLabels:
          key41: value43
